# newtua-py

./: .gitignore  Cargo.toml  NOTICE  README.en.md  README.md  README_ru.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
python/newtua/: __init__.py  _archive.py  _async.py  _batch.py  _entry.py  _errors.py  _events.py  _format.py  _newtua.pyi  _stream.py
src/: lib.rs
tests/: conftest.py  test_archive.py  test_async.py  test_async_primitives.py  test_batch.py  test_entry.py  test_errors.py  test_events.py  test_format.py  test_newtua.py  test_stream.py  test_typing.py  typing_sample.py
tests/fixtures/: hello.7z
