[build-system]
# 1.9 is the floor for PEP 639 (`license` as an SPDX expression plus
# `license-files`). On 1.7/1.8 those fields are ignored, and a copyleft package
# would ship with no license text at all.
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "newtua"
dynamic = ["version"]
description = "Python bindings for newtua — a fast, in-process Rust archive extractor (a rewrite of The Unarchiver)."
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
# NOTICE explains why the engine may be linked statically without the LGPL
# asking anything more, and covers the UnRAR terms that ride along with RAR
# support. UNRAR-LICENSE.txt is that library's own text.
license-files = ["LICENSE", "GPL-3.0.txt", "NOTICE", "UNRAR-LICENSE.txt"]
keywords = ["archive", "extract", "zip", "7z", "rar", "tar", "unarchiver"]
# No `License ::` classifier: PEP 639 deprecates them, and PyPI rejects a
# distribution that carries both a classifier and an SPDX `license`.
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/new-the-unarchiver"
Repository = "https://github.com/new-the-unarchiver/newtua-py"

[tool.maturin]
# Compiled extension lives at newtua/_newtua; the `newtua` package (python/)
# re-exports it. abi3 (from the crate's abi3-py311 feature) → one wheel per
# platform across Python >= 3.11.
module-name = "newtua._newtua"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
# The tests import their shared helpers as `from tests.conftest import ...`,
# which needs the repository root on sys.path. `python -m pytest` puts it there
# and the bare `pytest` command does not — so the suite passed locally and
# failed in CI. Saying it here makes the invocation stop mattering. It does not
# shadow an installed newtua: the package lives in `python/`, not at the root.
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["python/newtua", "tests/typing_sample.py"]

[tool.ruff]
target-version = "py311"
src = ["python"]

[tool.ruff.lint]
# ruff's defaults, plus TC004. That one catches a name imported under
# `if TYPE_CHECKING:` and then used in an annotation the interpreter evaluates
# at import time — which raises NameError on Python 3.11-3.13 and nothing at
# all on 3.14, where annotations are deferred by default. It is exactly the
# kind of bug a 3.14 development machine cannot see, and it did ship once.
# The fix is `from __future__ import annotations` in that one file — not in
# every file, which is why this is a linter rule and not a convention.
select = ["E4", "E7", "E9", "F", "TC004"]
